<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:id="@+id/about"
        android:icon="@drawable/ic_home"

        android:title="@string/about" />



    <item android:id="@+id/complints"
        android:icon="@drawable/complaint"
        android:title="@string/complaints" />

<!--    <item android:id="@+id/foods"-->
<!--        android:icon="@drawable/food"-->
<!--        android:title="@string/foods" />-->

    <item android:id="@+id/stat"
        android:icon="@drawable/booking"
        android:title="@string/booking_status" />
    <item android:id="@+id/contact"
        android:icon="@drawable/ic_person"
        android:title="@string/contacts" />
    <item android:id="@+id/packges"
        android:icon="@drawable/pack"
        android:title="@string/packages" />


    <item android:id="@+id/raten"
        android:icon="@drawable/rate"
        android:title="Rating" />


    <item android:id="@+id/logout"
        android:icon="@drawable/ic_signout"
        android:title="Logout" />
</menu>